Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -8,6 +8,11 @@ trigger:
 resources:
 - repo: self
 
+pool:
+  name: 'agent_ayesha'                             # your agent pool
+  demands:
+    - agent.name -equals agent_ayesha_linux  
+
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '8c952ee3-4196-455c-b905-a09224064f6f'
@@ -16,17 +21,12 @@ variables:
   dockerfilePath: '$(Build.SourcesDirectory)Dockerfile'
   tag: '$(Build.BuildId)'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
 stages:
 - stage: Build
   displayName: Build and push stage
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
